--- a/app/ui/char-hud.css
+++ b/app/ui/char-hud.css
@@ -82,7 +82,7 @@
 }
 
 
-.hud .char-icon.player-1,
+/*.hud .char-icon.player-1,*/
 .hud .char-icon.sean {
 	background-image: url(/Sonic/monitor-screens.png);
 	background-position: -32px -80px;
