--- a/app/actor/block.css
+++ b/app/actor/block.css
@@ -145,8 +145,8 @@
 .actor-item.actor-block-marble .sprite {
 	/*background-image: url(/Sonic/marble-zone-block.png);*/
 	background-image: var(--sprite-sheet, url(/Sonic/marble-zone-block.png));
-	background-position-x: calc(var(--sprite-x) * 32);
-	background-position-y: calc(var(--sprite-y) * 32);
+	background-position-x: calc(var(--sprite-x) * -32px);
+	background-position-y: calc(var(--sprite-y) * -32px);
 	background-repeat: repeat;
 	/*width: 32px;
 	height: 32px;*/
