--- a/app/region/shade-region.css
+++ b/app/region/shade-region.css
@@ -30,7 +30,8 @@
 .region.region-shade .region-filter-wrapper,
 .region.region-shade .sprite {
 	position: absolute;
-
+	width: calc(1px * var(--width));
+	height: calc(1px * var(--height));
 	pointer-events: none;
 	z-index: 5000000;
 }
@@ -44,8 +45,8 @@
 
 .region.region-shade .region-color-wrapper,
 .region.region-shade .sprite {
-	/*top: calc(1px + calc(-1px * var(--height)));
-	left: -16px;*/
+	top: calc(1px + calc(-1px * var(--height)));
+	left: -16px;
 	background-attachment: fixed;
 }
 
@@ -54,7 +55,7 @@
 
 	left:    0;
 	top:     0;
-	/*width:   calc(100% + 128px);*/
+	width:   calc(100% + 128px);
 	height:  calc(100% + 128px);
 	/*width:   calc(var(--viewportWidth));
 	height:  calc(var(--viewportHeight) + 128px);*/
