--- a/app/region/region.css
+++ b/app/region/region.css
@@ -1,14 +1,8 @@
 .region {
 	--widthPx: calc(1px * var(--width));
 	--heightPx: calc(1px * var(--height));
-
-	/*width: calc( var(--widthPx));*/
-
 	--widthNx: calc(-1px * var(--width));
 	--heightNx: calc(-1px * var(--height));
-	/*pointer-events: none;*/
-
-	/*will-change: transform, top, left;*/
 }
 
 .region .sprite {
@@ -19,28 +13,23 @@
 .region.region-lava .sprite,
 .region.region-water .sprite {
 	position: absolute;
-	/*width: calc(1px * var(--width));*/
-	/*height: calc(1px * var(--height));*/
 	pointer-events: none;
 }
 
 .region.region-shade .sprite,
+.region.region-waterfall .sprite,
 .region.region-lava .sprite,
 .region.region-water .sprite {
 
 	--bottomBoundary: -1px;
 
 	top: calc( calc(-1px * var(--height)) + max(0.00001px, var(--topBoundry)));
-
 	bottom: calc( var(--bottomBoundary) + 1px);
-
 	left: max(0.00001px, var(--leftBoundry));
 
-	width: min(
-		calc(var(--width) * 1px)
-		, calc(calc(16px * var(--scale)) + var(--viewportWidth))
-		, calc(var(--widthPx) - var(--leftBoundry))
-	);
+	width: calc(var(--widthPx) - max(0px, var(--leftBoundry)));
+
+	max-width: calc(16px + var(--viewportWidth));
 
 	height: auto;
 
@@ -53,15 +42,6 @@
 	bottom: calc( var(--bottomBoundary));
 	top: calc( calc( calc(-1px * var(--height)) + max(0.00001px, var(--topBoundry))) - 16px);
 	/*clip-path: var(--maskImage);*/
-}
-
-.region.region-water .region-color-wrapper {
-	overflow: hidden;
-	position: absolute;
-	left:   0;
-	right:  0;
-	top:    14px;
-	bottom: 64px;
 }
 
 .region.region-shade .region-color-wrapper,
@@ -120,172 +100,11 @@
 	top: 16px;
 }
 
-.viewport:not(.displacement-off) .region.region-water .region-filter {
-	backdrop-filter: invert(0);
-	filter: url(#waves);
-	z-index: -10000;
-	transform: translate3d(0, 0, 0);
-}
-
-.region.region-water .sprite:after {
-	content: '.';
-	color: transparent;
-	background-image: url(Sonic/water-surface-wave.png);
-	background-position: 0px 0px;
-	position: absolute;
-
-	opacity: min(var(--height), 0.5);
-
-	width: calc(100% + 2px);
-
-	left: calc(-1px);
-	height: 16px;
-	top: 8px;
-
-	/*animation:  100ms steps(1,end) infinite;
-	background-position-x: 0px;
-	background-position-y: 32px;*/
-	animation-name: water-waves-frames, water-waves-flow;
-	animation-timing-function: steps(3), ease-in-out;
-	animation-iteration-count: infinite, infinite;
-	animation-duration: 1400ms, 2800ms;
-	animation-direction: normal, alternate;
-	animation-delay: 0ms, 0ms;
-}
-
-.region.region-rain {
-	filter: blur(0.5px);
-	opacity: 0.6;
-}
-
-.region.region-rain .sprite:before {
-	content:  ' ';
-	position: absolute;
-	top: 0px;
-	bottom: 0px;
-	width: 100%;
-	height: calc(100% + -128px);
-	background: url(/custom/raindrops.png);
-	background-position: 0 0;
-	background-repeat: repeat;
-
-	z-index: 1000;
-	animation:
-		rain-drop-fall 0.25s linear infinite
-		, rain-drop-shift 1s linear infinite
-	;
-}
-
-.region.region-waterfall {
-	filter: url(#waterBlur);
-	height: 100%;
-	z-index: -1000;
-}
-
-.region.region-waterfall .sprite:before {
-	content:  ' ';
-	position: absolute;
-	top: 32px;
-	bottom: 0px;
-	width: 100%;
-	height: 100%;
-	background: url(/Sonic/waterfall.png);
-	background-position: 0 0;
-	background-repeat: repeat;
-	background-attachment: local;
-
-	opacity: 0.55;
-
-	filter: blur(0.25px);
-
-	animation: waterfall-fall 650ms steps(4) infinite;
-}
-
-.region.region-waterfall .sprite:after {
-	content: '.';
-	color: transparent;
-	background-image: url(Sonic/waterfall-cap.png);
-	background-position: 0px 0px;
-	position: absolute;
-
-	width: 100%;
-
-	left: 0;
-	height: 16px;
-	top: 32px;
-
-	opacity: 0.65;
-
-	/*animation:  100ms steps(1,end) infinite;
-	background-position-x: 0px;
-	background-position-y: 32px;*/
-	animation-name: waterfall-cap-shift;
-	animation-timing-function: steps(2);
-	animation-iteration-count: infinite;
-	animation-duration: 650ms;
-	animation-direction: alternate;
-	animation-delay: 0ms;
-}
-
-@keyframes rain-drop-fall {
-	0% {
-		background-position-y: 0px;
-	}
-	100% {
-		background-position-y: 256px;
-	}
-}
-
-@keyframes rain-drop-shift {
-	0% {
-		background-position-x: 0px;
-	}
-	100% {
-		background-position-x: -256px;
-	}
-}
-
-@keyframes waterfall-fall {
-	0% {
-		background-position-y: 0px;
-	}
-	100% {
-		background-position-y: 15px;
-	}
-}
-
-@keyframes waterfall-cap-shift {
-	0% {
-		background-position-x: 0px;
-	}
-	100% {
-		background-position-x: 12px;
-	}
-}
-
-@keyframes water-waves-frames {
-	0% {
-		background-position-y: 0px;
-	}
-	100% {
-		background-position-y: 48px;
-	}
-}
-
-@keyframes water-waves-flow {
-	0% {
-		background-position-x: 0px;
-	}
-	100% {
-		background-position-x: 96px;
-	}
-}
-
-
 .region.exit,
 .region.boss,
 .region.rolling,
 .region.grinding,
+.region-force,
 .region.corkscrew {
 	display: none !important;
 }
