--- a/app/subspace.css
+++ b/app/subspace.css
@@ -1,20 +1,19 @@
 .console {
 	position: absolute;
-	position: absolute;
 
 	transform-origin: left top;
-	width: calc( 100% * var(--scale) );
-	min-height: calc( 28pt  * var(--scale) );
-	max-height: calc( 50% * var(--scale) );
+	width: calc( 100% );
+	min-height: calc( 28pt );
+	max-height: calc( 50% );
 
 	flex-direction: column;
 	overflow: auto;
 	transition: transform 0.25s ease-in;
-	background-color: rgba(0,0,25,0.85);
+	background-color: rgba(0,0,25,0.95);
 
 	z-index: 200000;
 
-	transform: scale( calc( 1 / var(--scale) ) ) translateY(-100%) !important;
+	transform: translateY(-100%) !important;
 
 	overflow: scroll;
 
@@ -22,12 +21,12 @@
 }
 
 .console::-webkit-scrollbar {
-  display: none;
+	display: none;
 }
 
 .console.showConsole {
 	box-shadow: 0px 2px 2px rgba(0,0,0,0.85);
-	transform: scale( calc( 1 / var(--scale) ) ) translateY(-0%) !important;
+	transform: translateY(-0%) !important;
 }
 .console.hideConsole {
 	box-shadow: none;
@@ -43,9 +42,13 @@
 	box-sizing: border-box;
 	font-family: courier;
 	font-weight: bold;
-	font-size: calc( 1.75vw * var(--scale) );
+	font-size: 0.5rem;
 	color: white;
-	text-shadow: 2px 2px 1px rgba(0,0,0,1), -2px -2px 1px rgba(0,0,0,1), -2px 2px 1px rgba(0,0,0,1), 2px -2px 1px rgba(0,0,0,1);
+	text-shadow:
+		1px 1px 1px rgba(0,0,0,1)
+		, 1px -1px 1px rgba(0,0,0,1)
+		, -1px 1px 1px rgba(0,0,0,1)
+		, -1px -1px 1px rgba(0,0,0,1);
 }
 
 .terminal .output p {
