Snowboards, camera improvements, & CSS contain optimization

--- a/app/actor/block.css
+++ b/app/actor/block.css
@@ -129,7 +129,8 @@
 }
 
 .actor-item.actor-block {
-	z-index: calc(-1 - var(--x));
+	/*z-index: calc(-1 - var(--x));*/
+	z-index: 0;
 }
 
 .actor-item.actor-block .sprite.collapse {
