--- a/app/region/region-water.css
+++ b/app/region/region-water.css
@@ -7,11 +7,17 @@
 	bottom: 64px;
 }
 
+.region.region-water .region-color {
+	background-color: rgba(0,128,255,0.25);
+}
+
+.viewport:not(.displacement-off) .region.region-water .region-filter-wrapper {
+}
+
 .viewport:not(.displacement-off) .region.region-water .region-filter {
 	backdrop-filter: invert(0);
 	filter: url(#waves);
 	z-index: -10000;
-	transform: translate3d(0, 0, 0);
 }
 
 .region.region-water .sprite:after {
@@ -24,14 +30,11 @@
 	opacity: min(var(--height), 0.5);
 
 	width: calc(100% + 2px);
+	height: 16px;
 
 	left: calc(-1px);
-	height: 16px;
 	top: 8px;
 
-	/*animation:  100ms steps(1,end) infinite;
-	background-position-x: 0px;
-	background-position-y: 32px;*/
 	animation-name: water-waves-frames, water-waves-flow;
 	animation-timing-function: steps(3), ease-in-out;
 	animation-iteration-count: infinite, infinite;
