--- a/app/region/region.css
+++ b/app/region/region.css
@@ -3,6 +3,14 @@
 	--heightPx: calc(1px * var(--height));
 	--widthNx: calc(-1px * var(--width));
 	--heightNx: calc(-1px * var(--height));
+	display: contents;
+}
+
+.region.bg-region-shade {
+}
+
+.region.fg-region-shade {
+	display: block;
 }
 
 .region .sprite {
@@ -17,6 +25,7 @@
 }
 
 .region.region-shade .sprite,
+.region.region-shade .actor-layer,
 .region.region-waterfall .sprite,
 .region.region-lava .sprite,
 .region.region-water .sprite {
@@ -38,13 +47,15 @@
 }
 
 .region.region-shade .sprite,
+.region.region-shade .actor-layer,
 .region.region-water .sprite {
 	bottom: calc( var(--bottomBoundary));
 	top: calc( calc( calc(-1px * var(--height)) + max(0.00001px, var(--topBoundry))) - 16px);
 	/*clip-path: var(--maskImage);*/
 }
 
-.region.region-shade .region-color-wrapper,
+.region.region-shade.water .sprite .region-color-wrapper,
+.region.region-shade.lava  .sprite .region-color-wrapper,
 .region.region-lava .region-color-wrapper {
 	overflow: hidden;
 	position: absolute;
@@ -56,7 +67,6 @@
 
 .region.region-lava .region-color,
 .region.region-water .region-color {
-	background-color: rgba(0,128,255,0.25);
 	max-height: var(--viewportHeight);
 }
 
