--- a/app/region/shade-region.css
+++ b/app/region/shade-region.css
@@ -14,7 +14,7 @@
 }
 
 .region.region-shade.studio .hud-character-string {
-	filter: none;
+	/*filter: none;*
 }
 
 .region.region-shade .hud-character-string:not(:empty) {
@@ -28,6 +28,7 @@
 .region.region-shade .region-color-wrapper,
 .region.region-shade .region-filter,
 .region.region-shade .region-filter-wrapper,
+.region.region-shade .actor-layer,
 .region.region-shade .sprite {
 	position: absolute;
 	/*width: calc(1px * var(--width));
@@ -45,6 +46,16 @@
 	overflow: hidden;
 }
 
+.region.region-shade .region-color,
+.region.region-shade .region-color-wrapper {
+	width: 100%;
+}
+
+.region.region-shade .region-color {
+
+}
+
+.region.region-shade .actor-layer,
 .region.region-shade .sprite {
 	position: absolute;
 	top: calc( calc(-1px * var(--height)) + max(0.00001px, var(--topBoundry)))
@@ -58,31 +69,38 @@
 	position: absolute;
 
 	left:    0;
-	top:     0;
+	top:     -16px;
 	width:   calc(100% + 128px);
 	height:  calc(100% + 128px);
 	/*width:   calc(var(--viewportWidth));
 	height:  calc(var(--viewportHeight) + 128px);*/
 }
 
-.region.region-shade.studio .sprite {
+.region.region-shade.studio > .filter-wrapper > .filter {
 	/*opacity: 0.99999997019;*/
 	/*opacity: 1;*/
 	/*background-blend-mode: darken;*/
-	backdrop-filter: blur(10px);
+	/*backdrop-filter: invert(1);*/
 }
 
-.region.region-shade.studio .region-color-wrapper {
-	opacity: 0.5;
-	background-color: rgba(255,255,255,1);
-	mix-blend-mode: exclusion;
+.region.fg-region-shade.studio .region-filter {
+	/*filter: brightness(100);*/
 }
 
+.region.bg-region-shade.studio .region-color-wrapper {
+	background-color: rgba(255,255,255,0.5);
+}
+
+.region.fg-region-shade.studio .region-color-wrapper {
+	background-color: rgba(255,255,255,0.5);
+}
+
+.region.region-shade.studio .region-color-wrapper,
 .region.region-shade.studio .region-filter-wrapper {
+	top: 0px;
 }
 
 .region.region-shade.runners .region-color-wrapper {
-	mix-blend-mode: darken;
 	opacity: 0;
 }
 
@@ -95,37 +113,11 @@
 	;
 }
 
-
-/*.filters-screen.runners::before {
-	content: ' ';
-	display: block;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	backdrop-filter:
-		drop-shadow(1px 1px 0.125px black)
-		drop-shadow(-1px 1px 0.125px black)
-		drop-shadow(1px -1px 0.125px black)
-		drop-shadow(-1px -1px 0.125px black)
-	;
-}
-
-.filters-screen.runners::after {
-	content: ' ';
-	display: block;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	mix-blend-mode: darken;
-	opacity: 0;
-}
-*/
-
 .region.region-shade.western .region-filter {
 	backdrop-filter: sepia(0.85) brightness(0.75) contrast(1.5);
 }
 
-.region.region-shade.hydro .region-color {
+.region.region-shade.hydro .sprite .region-color {
 	background-color: rgba(0,128,255,0.25);
 }
 
@@ -149,7 +141,7 @@
 .region.region-shade.hydro .sprite:after {
 	content: ' ';
 	position: absolute;
-	top: 0;
+	top: 8px;
 	left: 0;
 	bottom: 0;
 	right: 0;
@@ -174,6 +166,7 @@
 .region.region-shade.heat .region-color-wrapper {
 	background-color: rgba(255,255,255,0.0);
 	mix-blend-mode: lighten;
+	display: contents;
 }
 
 .region.region-shade.heat .region-color {
@@ -208,7 +201,7 @@
 }
 
 .region.region-lava .region-color,
-.region.region-shade.lava .region-color {
+.region.region-shade.lava .sprite .region-color {
 	animation:
 		lava-ripple linear infinite 3.5s
 		, lava-flow linear infinite 11.5s;
@@ -228,10 +221,10 @@
 }
 
 .region.region-lava .region-color-wrapper:after,
-.region.region-shade.lava .region-color-wrapper:after {
+.region.region-shade.lava .sprite .region-color-wrapper:after {
 	content: ' ';
 	position: absolute;
-	top: 0;
+	top: 0px;
 	left: 0;
 	bottom: 0;
 	right: 0;
@@ -243,10 +236,10 @@
 
 	opacity: 0.75;
 
-	z-index: 10000;
+	z-index: 10000000000;
 
 	animation:
-		lava-waves steps(1) infinite 1.5s
+		lava-waves linear infinite 0.75s
 		, lava-flow linear infinite 11.5s;
 }
 
@@ -255,7 +248,7 @@
 }
 
 .region.region-shade.lava .region-color-wrapper:after {
-	transform: translateY(16px);
+	/*transform: translateY(-4px);*/
 }
 
 .viewport.displacement-off .region.region-shade.heat .region-filter {
@@ -276,12 +269,15 @@
 }
 
 .region.region-shade.frost .region-filter-wrapper {
-	/*background-color: rgba(255,255,255,0.0);*/
+	background-color: rgba(255,255,255,0);
+	backdrop-filter: blur(2px);
+	filter: blur(2px);
 }
 
 .region.region-shade.frost .region-color-wrapper {
-	/*background-color: rgba(255,255,255,0.0);*/
 	mix-blend-mode: lighten;
+	backdrop-blend-mode: difference;
+	opacity: 0.5;
 }
 
 .region.region-shade.frost .region-color {
@@ -340,9 +336,16 @@
 		drop-shadow(0px 0px 2px rgba(0,0,0,0.75));
 }
 
+.region.region-shade.black-hole {
+	padding-bottom: 64px;
+}
+
 .region.region-shade.black-hole .region-filter-wrapper {
 	backdrop-filter: blur(0px);
  	filter: url(#shade-pinch);
+}
+
+.region.bg-region-shade {
 }
 
 @keyframes shade-title-flicker {
