--- a/app/particle/stars.css
+++ b/app/particle/stars.css
@@ -1,4 +1,5 @@
 .particle-stars {
+	animation: star-shield-rotate 0.25s steps(5) infinite;
 	background-image: url(/Sonic/invincibility-stars.png);
 	background-position-x:  calc(var(--frame) * -64px);
 	background-position-y:  calc(var(--frame) * -0px);
