--- a/app/actor/html-frame.css
+++ b/app/actor/html-frame.css
@@ -8,10 +8,12 @@
 
 .actor-html-frame .sprite {
 	transform: scale(0.5);
+	background-color: rgba(0, 0, 0, 0.20);
 }
 
 .actor-html-frame iframe {
 	transform-origin: top left;
+	transition: transform 1s ease-in;
 	transform: scale(0.25);
 	z-index: -1000000;
 	position: absolute;
@@ -24,3 +26,13 @@
 	max-width: none;
 	pointer-events: initial;
 }
+
+.actor-html-frame {
+	animation: expand 0.25s ease-in;
+}
+
+@keyframes expand {
+	0%{   transform: scale(0);  }
+	100%{ transform: scale(1);  }
+}
+
