--- a/app/actor/orb.css
+++ b/app/actor/orb.css
@@ -5,7 +5,7 @@
 	background-image: url(/Sonic/checker-orb.png);
 	background-size: contain;
 	height: calc(var(--height) * 1px);
-	width: calc(var(--width) * 1px);
+	width: calc(var(--height) * 1px);
 	transform: rotate(calc(var(--rolled) * 1deg));
 }
 
