--- a/app/powerups/sheild.css
+++ b/app/powerups/sheild.css
@@ -144,13 +144,13 @@
 	transform: rotate(calc(calc(-1rad * var(--air-angle)) + 180deg));
 }
 
-.actor-sonic[data-animation=wall-dropping] .bubble-sheild {
-	top: 42px;
-	left: -5px;
-}
 .actor-sonic[data-animation=wall-stick] .bubble-sheild {
 	top: 32px;
 	left: -1px;
+}
+
+.actor-sonic[data-animation=wall-stick] .sheild {
+	transform: rotate(90deg);
 }
 
 .actor-sonic[data-animation=wall-stick] .electric-sheild,
