--- a/app/Menu/main-menu.css
+++ b/app/Menu/main-menu.css
@@ -105,7 +105,8 @@
 .screen-card-main-menu .unavailable:focus::after {
 	display: initial;
 
-	transform: scale(50%);
+	transform: scale(0.666);
+
 	transform-origin: top left;
 
 	position: absolute;
@@ -270,20 +271,27 @@
 	border: none;
 	color: white;
 }
+
 .screen-card-pause-menu [data-wraps=number]::before,
 .screen-card-main-menu [data-wraps=number]::before,
 .screen-card-pause-menu [data-wraps=select]::before,
 .screen-card-main-menu [data-wraps=select]::before {
-	content: '◀︎';
+	position: relative;
+	top: -0.5em;
 	padding-right: 0.5em;
+	font-size: 0.5em;
+	content: '◀︎';
 }
 
 .screen-card-pause-menu [data-wraps=number]::after,
 .screen-card-main-menu [data-wraps=number]::after,
 .screen-card-pause-menu [data-wraps=select]::after,
 .screen-card-main-menu [data-wraps=select]::after {
-	content: '▶';
+	position: relative;
+	top: -0.5em;
 	padding-left: 0.5em;
+	font-size: 0.5em;
+	content: '▶';
 }
 
 .screen-card-pause-menu input,
@@ -302,13 +310,20 @@
 .screen-card-pause-menu input[type=number] {
 	text-align: center;
 	display: inline;
-	width: 1rem;
+	width: 1.5rem;
+	font-size: 1em;
 }
 
 .screen-card-main-menu ul {
 	height: 11em;
 	overflow: auto;
 	scroll-snap-type: y mandatory;
+	margin: 0;
+	/*padding-bottom: 1em;*/
+}
+
+.screen-card-main-menu li:first-child {
+	/*margin-top: 1.25em;*/
 }
 
 .screen-card-main-menu li {
@@ -321,4 +336,14 @@ input::-webkit-inner-spin-button {
 	/*-webkit-appearance: inner-spin-button !important;*/
 	-webkit-appearance: none;
 	margin: 0;
+}
+
+[data-wraps="select"] {
+	position: relative;
+	width: 18rem;
+}
+
+[data-wraps="select"] > select {
+	left: 0;
+	right: 0;
 }
